--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@jSquash/avif": "npm:@jsquash/avif@^1.0.2",
+    "@jsquash/jpeg": "^1.1.5",
+    "@jSquash/oxipng": "npm:@jsquash/oxipng@^1.0.0",
+    "@jsquash/png": "^2.0.0",
+    "@jSquash/webp": "npm:@jsquash/webp@^1.1.3",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "daisyui": "^2.51.6",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "file-saver": "^2.0.5",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
